<resources>
    <string name="app_name">MaxApp</string>
    <string name="fechar">Fechar</string>
    <string name="Dados_do_Cliente">Dados do Cliente</string>
    <string name="razao_social_cliente">Razão Social Cliente</string>
    <string name="nome_fantasia_cliente">Nome Fantasia Cliente</string>
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>
    <string name="ramo_de_atividade">Ramo de Atividade</string>
    <string name="endereco">Endereço</string>
    <string name="contatos">Contatos</string>
    <string name="nome_do_contato">Nome do Contato</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="data_nasc">Data Nasc.</string>
    <string name="data_nasc_conjuge">Data Nasc. Cônjuge</string>
    <string name="time">Time</string>
    <string name="celular">Celular</string>
    <string name="conjuge">Cônjuge</string>
    <string name="nome_do_conjuge">Nome do cônjuge</string>
    <string name="tipo">Tipo</string>
    <string name="socio">Sócio</string>
    <string name="btn_status">Verificar status do cliente</string>
    <string name="legendas">Legendas</string>
    <string name="status_do_pedido_no_erp">Status do pedido no ERP</string>
    <string name="em_processamento_por_parte_do_fv">Em processamento por parte do FV</string>
    <string name="pedido_recusado_pelo_erp">Pedido recusado pelo ERP</string>
    <string name="posicao_no_erp_pendente">Posição no ERP Pendente</string>
    <string name="posicao_no_erp_bloqueado">Posição no ERP Bloqueado</string>
    <string name="posicao_no_erp_liberado">Posição no ERP Liberado</string>
    <string name="posicao_no_erp_montado">Posição no ERP Montado</string>
    <string name="posicao_no_erp_faturado">Posição no ERP Faturado</string>
    <string name="posicao_no_erp_cancelado">Posição no ERP Cancelado</string>
    <string name="orcamento">Orçamento</string>
    <string name="critica">Crítica</string>
    <string name="aguardando_retorno_do_erp">Aguardando retorno do ERP</string>
    <string name="sucesso">Sucesso</string>
    <string name="falha_parcial">Falha parcial</string>
    <string name="falha_total">Falha total</string>
</resources>
